@@ -1,7 +1,8 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/netboot2-final.sh,v 1.1 2006/01/13 15:09:07 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/netboot2-final.sh,v 1.2 2006/01/16 15:25:08 wolf31o2 Exp $
+
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
@@ -17,11 +18,11 @@ for x in ${clst_boot_kernel}; do
 	mv ${clst_target_path}boot/${x} ${clst_target_path}kernels
 	mv ${clst_target_path}boot/${x}.igz ${clst_target_path}kernels/misc
 done
+
 rmdir ${clst_target_path}boot
 
-
-# Any post-processing necessary for each architecture can be done here.  This may
-# include things like sparc's elftoaout, x86's PXE boot, etc.
+# Any post-processing necessary for each architecture can be done here.  This
+# may include things like sparc's elftoaout, x86's PXE boot, etc.
 case ${clst_mainarch} in
 	alpha)
 		sleep 0
